# POO-FINAL

IPcalculation/: LICENSE  README.md  setup.cfg
IPcalculation/src/IPcalculation/: IPcalculation.py
IPcalculation/src/IPcalculation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pacote/src/: LICENSE  pyproject.tomi  setup.cfg
pacote/src/physics_calculation/: physics_calculation.py  teste.py
