[metadata]
name = IPcalculation
version = 1.0.7
author = Paulo Henrique, Isdael Oliveira    
author_email = hunter404paulo@gmail.com, isdael.oliveira@gmail.com
description = Pacote para calculos matematicos
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PauloHenrique-UFPI/POO-FINAL.git
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src