[metadata]
name = physics_calculation
version = 0.0.1
author = Paulo Henrique, Isdael Oliveira
author_email = hunter404paulo@gmail.com, isdael.oliveira@gmail.com
description = Pacote para calculo de fisica
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PauloHenrique-UFPI/POO-FINAL.git
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft Windows

[options]
package_dir = 
    = src 
    package = find:
    python_requires = >=3.8
    
[options.packages.find]
where = src